@@ -207,6 +207,8 @@ Bug Fixes
 * SOLR-6501: Binary Response Writer does not return wildcard fields.
   (Mike Hugo, Constantin Mitocaru, sarowe, shalin)
 
+* SOLR-6507: Fixed several bugs involving stats.field used with local params (hossman)
+
 Other Changes
 ---------------------
 
